--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="shortcut icon"
+            href="https://img.icons8.com/external-filled-line-rakhmat-setiawan/64/000000/external-book-back-to-school-filled-line-filled-line-rakhmat-setiawan-4.png"
+        />
         <title>My Library</title>
     </head>
     <body class="body">
@@ -18,20 +22,6 @@
                     <img class="theme-icon" src="../src/img/moon.svg" alt="" />
                 </button>
             </div>
-            <div class="filter-button">
-                <span>Filter by</span>
-                <img class="filter-arrow" src="../src/img/arrow.svg" alt="down-arrow" />
-            </div>
-            <ul class="filter-options">
-                <li class="filter-options__option option-read">
-                    Read
-                    <div class="books-container__circle books-container__green"></div>
-                </li>
-                <li class="filter-options__option option-noread">
-                    Not read
-                    <div class="books-container__circle books-container__red"></div>
-                </li>
-            </ul>
             <!-- Form Markup -->
             <div class="form-container">
                 <h2 class="form-container__title font-400">New Book</h2>
