--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <div class="main__books">
                 <h2 class="main__books--title font-400">Books</h2>
                 <button class="theme-button button">
-                    <img class="theme-icon" src="../src/img/moon.svg" alt="" />
+                    <img class="theme-icon" src="./img/moon.svg" alt="" />
                 </button>
             </div>
             <!-- Form Markup -->
