--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
             <div class="main__books">
                 <h2 class="main__books--title font-400">Books</h2>
                 <button class="theme-button button">
-                    <img class="theme-icon" src="./img/moon.svg" alt="" />
+                    <img class="theme-icon moon" src="./img/moon.svg" alt="moon icon" />
+                    <img class="theme-icon sun" src="./img/sun.svg" alt="sun icon" />
                 </button>
             </div>
             <!-- Form Markup -->
