Images bug fixed

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
             </div>
             <!-- Books Container -->
             <ul class="books-container"></ul>
+            <img src="./img/delete.svg" alt="delete button" class="html-display-delete" />
         </main>
     </body>
 </html>
